syntax = "proto3";

import "google/api/annotations.proto";


package api.user;

option go_package = "galileo/api/user;user";
option java_multiple_files = true;
option java_package = "api.user";

service User {
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {};
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
  rpc GetUser (GetUserRequest) returns (GetUserReply){
    option (google.api.http) = {
      get : "/user/{id}",
    };
  };
  rpc ListUser (ListUserRequest) returns (ListUserReply);
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/hello/{name}"
    };
  };
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}
message CreateUserReply {
  string message = 1;
}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {
  uint32 id = 1;
}
message GetUserReply {
  string username = 1;
  int32 status = 2;
  uint32 id = 3;
}

message ListUserRequest {}
message ListUserReply {}